Fix fweight to 500px on mobile, zmist293

--- a/src/styles/pages/search.scss
+++ b/src/styles/pages/search.scss
@@ -90,6 +90,7 @@
 
     @include media-breakpoint-down(sm) {
       font-size: 20px;
+      font-weight: 500;
     }
 
     &:hover,
